--- a/Pantalones.html
+++ b/Pantalones.html
@@ -66,7 +66,7 @@
   </div>
   <div class="item">
       <figure>
-         <img src="/Fotos/Pantalones/Pantalon ancho de cuerina/1.PNG" alt="pantalones">
+         <img src="./Fotos/Pantalones/Pantalon ancho de cuerina/1.PNG" alt="pantalones">
       </figure>
       <div class="info-product">
           <h2>Pantalon Cuerina</h2>
@@ -76,7 +76,7 @@
   </div>
   <div class="item">
       <figure>
-          <img src="/Fotos/Pantalones/Pantalon de bengalina/1.PNG" alt="pantalones">
+          <img src="./Fotos/Pantalones/Pantalon de bengalina/1.PNG" alt="pantalones">
       </figure>
       <div class="info-product">
           <h2>Pantalon Bengalina</h2>
@@ -96,7 +96,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Pantalones/Pantalon ancho de cuerina/2.PNG" alt="pantalones">
+        <img src="./Fotos/Pantalones/Pantalon ancho de cuerina/2.PNG" alt="pantalones">
       </figure>
       <div class="info-product">
           <h2>Pantalon cuerina brillante</h2>
@@ -106,7 +106,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Pantalones/Pantalon de bengalina/1.PNG" alt="pantalones">
+        <img src="./Fotos/Pantalones/Pantalon de bengalina/1.PNG" alt="pantalones">
       </figure>
       <div class="info-product">
           <h2>Pantalon Bengalina brillante</h2>
@@ -126,7 +126,7 @@
           </div>
           <div class="item">
               <figure>
-                <img src="/Fotos/Pantalones/Pantalon ancho de cuerina/1.PNG" alt="pantalones">
+                <img src="./Fotos/Pantalones/Pantalon ancho de cuerina/1.PNG" alt="pantalones">
               </figure>
               <div class="info-product">
                   <h2>Pantalon cuerina noche</h2>
