--- a/Remeras.html
+++ b/Remeras.html
@@ -65,7 +65,7 @@
   </div>
   <div class="item">
       <figure>
-         <img src="/Fotos/Remeras/Blusa de crep con volado/1.PNG" alt="remeras">
+         <img src="./Fotos/Remeras/Blusa de crep con volado/1.PNG" alt="remeras">
       </figure>
       <div class="info-product">
           <h2>Blusa con volado</h2>
@@ -75,7 +75,7 @@
   </div>
   <div class="item">
       <figure>
-          <img src="/Fotos/Remeras/Blusa manga globo/1.PNG" alt="remeras">
+          <img src="./Fotos/Remeras/Blusa manga globo/1.PNG" alt="remeras">
       </figure>
       <div class="info-product">
           <h2>Blusa manga Globo</h2>
@@ -95,7 +95,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Remeras/camisa rallada/1.PNG" alt="remeras">
+        <img src="./Fotos/Remeras/camisa rallada/1.PNG" alt="remeras">
       </figure>
       <div class="info-product">
           <h2>Camisa rallada</h2>
@@ -105,7 +105,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Remeras/Remera algodon cuello V aplique/1.PNG" alt="remeras">
+        <img src="./Fotos/Remeras/Remera algodon cuello V aplique/1.PNG" alt="remeras">
       </figure>
       <div class="info-product">
           <h2>Remera cuello V</h2>
@@ -125,7 +125,7 @@
           </div>
           <div class="item">
               <figure>
-                <img src="/Fotos/Remeras/Remerones de  algodon/1.PNG" alt="remeras">
+                <img src="./Fotos/Remeras/Remerones de  algodon/1.PNG" alt="remeras">
               </figure>
               <div class="info-product">
                   <h2>Pantalon cuerina noche</h2>
