--- a/jeans.html
+++ b/jeans.html
@@ -65,7 +65,7 @@
   </div>
   <div class="item">
       <figure>
-         <img src="/Fotos/Jeans/Wide leg Azul/1.PNG" alt="bici">
+         <img src="./Fotos/Jeans/Wide leg Azul/1.PNG" alt="bici">
       </figure>
       <div class="info-product">
           <h2>Jeans Blanco</h2>
@@ -75,7 +75,7 @@
   </div>
   <div class="item">
       <figure>
-          <img src="/Fotos/Jeans/Wide leg celeste rigido/1.PNG" alt="bici">
+          <img src="./Fotos/Jeans/Wide leg celeste rigido/1.PNG" alt="bici">
       </figure>
       <div class="info-product">
           <h2>Jeans Celeste</h2>
@@ -95,7 +95,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Jeans/Wide leg Azul/1.PNG" alt="bici">
+        <img src="./Fotos/Jeans/Wide leg Azul/1.PNG" alt="bici">
       </figure>
       <div class="info-product">
           <h2>Jeans Verde</h2>
@@ -105,7 +105,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Jeans/Wide leg celeste rigido/1.PNG" alt="bici">
+        <img src="./Fotos/Jeans/Wide leg celeste rigido/1.PNG" alt="bici">
       </figure>
       <div class="info-product">
           <h2>Jeans Beige</h2>
@@ -125,7 +125,7 @@
           </div>
           <div class="item">
               <figure>
-                <img src="/Fotos/Jeans/Wide leg Azul/1.PNG" alt="bici">
+                <img src="./Fotos/Jeans/Wide leg Azul/1.PNG" alt="bici">
               </figure>
               <div class="info-product">
                   <h2>Jeans turqueza</h2>
