--- a/Short.html
+++ b/Short.html
@@ -65,7 +65,7 @@
   </div>
   <div class="item">
       <figure>
-         <img src="/Fotos/Shorts/bermuda wide leg rigida/1.PNG" alt="shorts">
+         <img src="./Fotos/Shorts/bermuda wide leg rigida/1.PNG" alt="shorts">
       </figure>
       <div class="info-product">
           <h2>Bermuda wide leg rigida</h2>
@@ -75,7 +75,7 @@
   </div>
   <div class="item">
       <figure>
-          <img src="/Fotos/Shorts/Capri/1.PNG" alt="shorts">
+          <img src="./Fotos/Shorts/Capri/1.PNG" alt="shorts">
       </figure>
       <div class="info-product">
           <h2>Capri</h2>
@@ -95,7 +95,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Shorts/short negro con dobladillo elastizado/1.PNG" alt="shorts">
+        <img src="./Fotos/Shorts/short negro con dobladillo elastizado/1.PNG" alt="shorts">
       </figure>
       <div class="info-product">
           <h2>Short negro con dobladillo</h2>
@@ -105,7 +105,7 @@
   </div>
   <div class="item">
       <figure>
-        <img src="/Fotos/Shorts/Short pollera/1.PNG" alt="shorts">
+        <img src="./Fotos/Shorts/Short pollera/1.PNG" alt="shorts">
       </figure>
       <div class="info-product">
           <h2>Short pollera</h2>
@@ -125,7 +125,7 @@
           </div>
           <div class="item">
               <figure>
-                <img src="/Fotos/Shorts/Bermuda Lali gris/2.PNG" alt="shorts">
+                <img src="./Fotos/Shorts/Bermuda Lali gris/2.PNG" alt="shorts">
               </figure>
               <div class="info-product">
                   <h2>Bermuda gris</h2>
