--- a/Sale.html
+++ b/Sale.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg" style="background-color: #f3aeac;" >
         
         <div class="container-fluid">
-          <a class="navbar-brand text-white icon" href="index1.html">
+          <a class="navbar-brand text-white icon" href="index.html">
             <!-- superior izquierdo inicio-->
             <img src="./Fotos/Logo xenoWhap.png" alt="Bootstrap" width="100" height="50"> XenoWhapp  
         </a>
@@ -46,7 +46,7 @@
         </div>  
       </nav>
 </header>
-<section id="banner2">
+<section id="bannerSale">
   <div class="bannerMid">
   </div>
   </section>
