--- a/Pantalones.html
+++ b/Pantalones.html
@@ -142,7 +142,7 @@
       <div class="container mt-2 ">
           <div class="row mx-auto">
             <ul class="navbar-nav">
-              <div class="col col-2 text-center">
+              <div class="col text-center">
                 <li class="nav-item">
                   <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
                 </li>
