--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg" style="background-color: #f3aeac;" >
+        <nav class="navbar navbar-expand-lg"  >
             
             <div class="container-fluid">
               <a class="navbar-brand text-white icon" href="index.html">
@@ -24,7 +24,7 @@
                 <img src="./Fotos/Logo xenoWhap.png" alt="Bootstrap" width="100" height="50"> XenoWhapp  
             </a>
               <!-- superior izquierdo fin-->
-                <nav class="navbar navbar-expand-sm " style="background-color: #f3aeac" >
+                <nav class="navbar navbar-expand-sm " >
                 <div class="container-fluid">
                   <a class="navbar-brand" href="jeans.html"><p class="text-white ">Jeans</p></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,14 +56,14 @@
       
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" id="Banner">
-            <img src="./Fotos/Banner.png" class="d-block w-100" alt="...">
+          <div class="carousel-item active" >
+            <img src="./Fotos/Banner.png" class="d-block w-100 carousel-img" alt="...">
+          </div>
+          <div class="carousel-item" >
+            <img src="./Fotos/Banner2.png" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item" id="Banner">
-            <img src="./Fotos/Banner2.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" id="Banner">
-            <img src="./Fotos/Banner2.jpg" class="d-block w-100" alt="...">
+            <img src="./Fotos/Banner2.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -205,6 +205,7 @@ method="POST"
 
 </form>
 
+<h4 style="background-color: #b88383 ;">Reviews</h4>
 
 <section class="reviews">
   <div class="review">
@@ -230,7 +231,7 @@ method="POST"
       <div class="container mt-2 ">
           <div class="row mx-auto">
             <ul class="navbar-nav">
-              <div class="col col-2 text-center">
+              <div class="col text-center">
                 <li class="nav-item">
                   <a class="nav-link active text-white" aria-current="page" href="#">Preguntas Frecuentes</a>
                 </li>
