--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Trabajo Integrador</title>
 </head>
 <body>
-    <header>
+    <header class="fixed-top">
         <nav class="navbar navbar-expand-lg"  >
             
             <div class="container-fluid">
