--- a/Remeras.html
+++ b/Remeras.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="estilos.css">
 
     <title>Trabajo Integrador</title>
 </head>
 <body>
-  <header>
+  <header class="fixed-top">
     <nav class="navbar navbar-expand-lg" style="background-color: #f3aeac;" >
         
         <div class="container-fluid">
@@ -38,9 +43,9 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <a class="navbar-brand" href="Sale.html"><p class="text-white">SALE</p></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+              <a href="carrito.html" class="fa fa-shopping-cart" aria-hidden="true" onclick="handleCart()" id="carrito">
+                <span class="count">0</span>
+            </a>
               
             </div>
         </div>  
@@ -50,86 +55,86 @@
   <div class="bannerMid">
   </div>
   </section>
-  <section>
+  <section id="products">
   <h4>Remeras</h4>
 <div class="container-items">
-  <div class="item">
+  <div class="card">
       <figure>
          <img src="./Fotos/Remeras/Blusa de crep con  tiritas/1.PNG" alt="remeras">
       </figure>
-      <div class="info-product">
+      <div class="cards">
           <h2>Blusa crept</h2>
-           <p class="precio"> $10.000</p>
+           <p class="precio"> $10000</p>
            <button>Añadir a carrito</button>
       </div>     
   </div>
-  <div class="item">
+  <div class="card">
       <figure>
          <img src="./Fotos/Remeras/Blusa de crep con volado/1.PNG" alt="remeras">
       </figure>
-      <div class="info-product">
+      <div class="cards">
           <h2>Blusa con volado</h2>
-          <p class="precio"> $20.000</p>
+          <p class="precio"> $20000</p>
           <button>Añadir a carrito</button>
       </div>     
   </div>
-  <div class="item">
+  <div class="card">
       <figure>
           <img src="./Fotos/Remeras/Blusa manga globo/1.PNG" alt="remeras">
       </figure>
-      <div class="info-product">
+      <div class="cards">
           <h2>Blusa manga Globo</h2>
-          <p class="precio"> $50.000</p>
+          <p class="precio"> $50000</p>
           <button>Añadir a carrito</button>
       </div>     
   </div>
-  <div class="item">
+  <div class="card">
       <figure>
         <img src="./Fotos/Remeras/Body/1.PNG" alt="remeras">
       </figure>
-      <div class="info-product">
+      <div class="cards">
           <h2>Body</h2>
-          <p class="precio"> $50.000</p>
+          <p class="precio"> $50000</p>
           <button>Añadir a carrito</button>
       </div>     
   </div>
-  <div class="item">
+  <div class="card">
       <figure>
         <img src="./Fotos/Remeras/camisa rallada/1.PNG" alt="remeras">
       </figure>
-      <div class="info-product">
+      <div class="cards">
           <h2>Camisa rallada</h2>
-          <p class="precio"> $50.000</p>
+          <p class="precio"> $50000</p>
           <button>Añadir a carrito</button>
       </div>     
   </div>
-  <div class="item">
+  <div class="card">
       <figure>
         <img src="./Fotos/Remeras/Remera algodon cuello V aplique/1.PNG" alt="remeras">
       </figure>
-      <div class="info-product">
+      <div class="cards">
           <h2>Remera cuello V</h2>
-          <p class="precio"> $50.000</p>
+          <p class="precio"> $50000</p>
           <button>Añadir a carrito</button>
       </div>   
   </div>
-      <div class="item">
+      <div class="card">
           <figure>
             <img src="./Fotos/Remeras/Remeras con strass/1.PNG" alt="remeras">
           </figure>
-          <div class="info-product">
+          <div class="cards">
               <h2>Remera con strass</h2>
-              <p class="precio"> $50.000</p>
+              <p class="precio"> $50000</p>
               <button>Añadir a carrito</button>
           </div>   
           </div>
-          <div class="item">
+          <div class="card">
               <figure>
                 <img src="./Fotos/Remeras/Remerones de  algodon/1.PNG" alt="remeras">
               </figure>
-              <div class="info-product">
+              <div class="cards">
                   <h2>Pantalon cuerina noche</h2>
-                  <p class="precio"> $50.000</p>
+                  <p class="precio"> $50000</p>
                   <button>Añadir a carrito</button>
               </div>     
               </div>
@@ -185,6 +190,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>  
+    <script src="/script.js"></script>
   </body>
  
 <!--Chispea aca https://cmzo.github.io/tp_integrador_bootstrap/-->
