--- a/carrito.html
+++ b/carrito.html
@@ -49,7 +49,7 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   </button>
-                  <a href="Pantalones.html">
+                  <a href="carrito.html">
                   <i class="fa fa-shopping-cart" aria-hidden="true"><p></p></i>
                   </a>
                   </button>
